--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-slate
+
+title: Particle Fritzing Library
+description: Fritzing parts for Particle mesh third generation boards
